k3s/apps/thefractalspace/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: thefractalspace
spec:
  type: ClusterIP
  selector:
    app: thefractalspace
    component: website
  ports:
    - name: http
      port: 8000
      targetPort: 8000
